# minimalloc

./: CMakeLists.txt  MANIFEST.in  pyproject.toml
minimalloc/: __init__.py  minimalloc.py
src/: c_wrapper.cc  c_wrapper.h
