[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimalloc"
version = "0.1.0"
description = "A lightweight memory allocator for hardware-accelerated machine learning"
requires-python = ">=3.7"

[tool.setuptools.package-data]
"minimalloc" = ["*.so", "*.dylib", "*.dll"]

[tool.setuptools]
packages = ["minimalloc"]
include-package-data = true
